2008-04-13  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokeravatar.py.in
	(PokerAvatarTestCase.test61_tableCreateFails): Wrote function.
	(PokerAvatarTestCase.createTableForceFail): Wrote function.

2008-04-10  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokeravatar.py.in
	(PokerAvatarTestCase.doLogoutSucceed): Renamed function from
	doLogout as succeed/fail cases are now split.
	(PokerAvatarTestCase.doLogoutFail): split out doLogout fail
	conditions.

2008-04-06  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokeravatar.py.in
	(PokerAvatarTestCase.test53_autoMuck): Wrote function.
	(PokerAvatarTestCase.autoMuck): Wrote function.
	(PokerAvatarTestCase.test54_doQuit): Wrote function.
	(PokerAvatarTestCase.tableQuit): Wrote function.
	(PokerAvatarTestCase.joinTableForceFail): Wrote function.
	(PokerAvatarTestCase.test55_tableJoinWhenFails): Wrote function.
	(PokerAvatarTestCase.handReplayWithoutTable): Wrote function.
	(PokerAvatarTestCase.test56_handReplyNoTable): Wrote function.
	(PokerAvatarTestCase.test54_doTableQuit): Renamed function from
	test54_doQuit to avoid confusion with test57_doFullQuit.
	(PokerAvatarTestCase.test57_doFullQuit): Wrote function.
	(PokerAvatarTestCase.fullQuit): Wrote function.
	(PokerAvatarTestCase.test58_packetLogoutSucceed): Wrote function.
	(PokerAvatarTestCase.doLogout): Wrote function.
	(PokerAvatarTestCase.tourneySelect): Fixed total for expected
	tourneys.  This should probably be changed -- why do we have so
	many test-created sitngo's?
	(PokerAvatarTestCase.test59_packetLogoutFailed): Wrote function.
	(PokerAvatarTestCase.test60_handSelectAllWithWhere): Wrote
	function.

2008-03-24  Loic Dachary <loic@dachary.org>
	* Release 1.5.0

	* NEWS, conf/poker.bot.xml.in, conf/poker.client.xml.in,
	  conf/poker.server.xml.in, debian/changelog,
	  examples/poker.bot.xml, examples/poker.server-monotone.xml,
	  examples/poker.server.xml, pokerclient2d/poker2d.xml.in,